--- a/src/presentation/components/ui/menu.sass
+++ b/src/presentation/components/ui/menu.sass
@@ -8,13 +8,13 @@
   @include interactive.popover
 
   & .item
-    @include accessibility.focus-outline
+    @include interactive.transparent
 
     &
       @include typography.label-medium
 
     &
-      @include interactive.transparent
+      @include accessibility.focus-border
 
     &
       align-items: center
