--- a/src/presentation/styles/_interactive.sass
+++ b/src/presentation/styles/_interactive.sass
@@ -44,11 +44,11 @@
 
 @mixin popover
   background: var(--neutral-background)
-  border: var(--stroke-s, 0.25rem) solid var(--neutral-border)
+  border: var(--element-stroke, 0.125rem) solid var(--neutral-border)
   border-radius: var(--element-radius, 0.25rem)
   inline-size: min(15.625rem, 100vw - var(--size-80, 0.5rem))
   max-block-size: min(20rem, 100svh - var(--size-80, 0.5rem))
-  overflow: auto
+  overflow-y: auto
   padding-block: var(--size-80, 0.5rem)
 
 @mixin transparent
